[package]
name = "mt9v034-i2c"
version = "0.1.1"
authors = ["Todd Stellanova <tstellanova@users.noreply.github.com>"]
edition = "2018"
description = "mt9v034 image sensor two-wire programming driver"
license = "BSD-3-Clause"
repository = "https://github.com/tstellanova/mt9v034-i2c"
categories = [
    "embedded",
    "hardware-support",
    "no-std",
]
keywords = [
    "embedded-hal-driver",
    "mt9v034",
    "camera",
    "imaging"
]
readme = "README.md"

[dependencies]
embedded-hal = { version = "0.2.3", features = ["unproven"] }
panic-rtt-core = {version="0.1.1", optional=true}

[features]
default = []
rttdebug = ["panic-rtt-core"]
